# Ruscord-C2

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.MD  build.rs  ruscord_example.toml
src/: error.rs  main.rs
src/commands/: io.rs  mod.rs  network.rs  process.rs  recon.rs  spyware.rs  utils.rs
src/utils/: channel_manager.rs  config.rs  logging.rs  mod.rs
