[package]
name = "ruscord_c2"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
thiserror = "2.0.4"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["fast-rng", "serde", "v4"] }
whoami = "1.4"
local-ip-address = "0.6.3"
chrono = "0.4.38"
sysinfo = { version = "0.33.0" }
tabled = "0.17.0"
zip = "2.2.1"
walkdir = "2.5.0"
clipboard = "0.5.0"
xcap = "0.0.14"

[build-dependencies]
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }


[patch.crates-io]
sysinfo = { path = "../Fixing Other Peoples Stuff/sysinfo" }
